--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap"
       rel="stylesheet"
     />
-    <title>Spelling Bee Remake</title>
+    <title>Wordle Remake</title>
   </head>
 
   <body>
